<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90ee90"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/latestKeywordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/post_rensou_reading"
        android:textColor="#ff0000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@id/latestKeywordText"
        android:text="@string/post_rensou_related"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/postRensouEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/post_rensou_hist_input_rensou"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:padding="5dp"
            android:textSize="20sp" >
            <!-- ヒントが複数行になる対策 http://inujirushi123.blog.fc2.com/blog-date-20130610.html -->

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_rensou_button_post"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>